Fixed odd text spacing

--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body {
     margin: 0;
     padding: 0;
     font-weight: 200;
-    vertical-align: text-top;
+    vertical-align: text-bottom;
+    text-align: center;
 }
 
 .name {
